@@ -255,6 +255,7 @@ class IMP_Dynamic_Compose_Common
             'compose_cancel' => _("Cancelling this message will permanently discard its contents and will delete auto-saved drafts.\nAre you sure you want to do this?"),
             'compose_close' => _("Compose action completed. You may now safely close this window."),
             'dragdropimg_error' => _("Could not add %d file(s) to message: only images are supported."),
+            'group_expand' => _("Expand Group"),
             'max_atc_size' => _("Your attachment(s) are too large and cannot be uploaded."),
             'max_atc_num' => _("You have reached the limit for the number of attachments in this message."),
             'nosubject' => _("The message does not have a subject entered.") . "\n" . _("Send message without a subject?"),
