@@ -2,6 +2,8 @@
 v6.3.0-git
 ----------
 
+[mms] Allow auto-completed e-mail groups to be expanded on the dynamic compose
+      page.
 [mms] Add class of message part rendering display errors that aren't show to
       the user by default.
 [mms] Throttle message list keypresses in dynamic view to prevent avalanche of
